--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,8 @@
 }
 html {
   scroll-behavior: smooth;
+  background-color: #0E0E0E;
+
 }
 .matemasie-regular {
   font-family: "Matemasie", sans-serif;
@@ -31,6 +33,8 @@ html {
   font-weight: 400;
   font-style: normal;
 }
+
+
 
 @keyframes fadeInDown {
   0% {
