--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -359,3 +359,11 @@ div::-webkit-scrollbar {
       0 0 40px rgba(147, 51, 234, 0.7), 0 0 60px rgba(236, 72, 153, 0.5);
   }
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
